@@ -26,8 +26,11 @@
 #include "PluginProcessShim.h"
 
 #include <Carbon/Carbon.h>
-#include <mach-o/dyld-interposing.h>
 #include <stdio.h>
+
+#define DYLD_INTERPOSE(_replacement,_replacee) \
+    __attribute__((used)) static struct{ const void* replacement; const void* replacee; } _interpose_##_replacee \
+    __attribute__ ((section ("__DATA,__interpose"))) = { (const void*)(unsigned long)&_replacement, (const void*)(unsigned long)&_replacee };
 
 namespace WebKit {
 
